--- a/TrafficSimulator/src/ui/styles/dashboard.css
+++ b/TrafficSimulator/src/ui/styles/dashboard.css
@@ -1,5 +1,6 @@
 #canvasAnchorPane {
     -fx-background-color: rgba(102, 163, 29, 0.84);
+    /*-fx-background-color: #dbdbd9;*/
 }
 
 .roadSurface{
