--- a/TrafficSimulator/src/ui/styles/dashboard.css
+++ b/TrafficSimulator/src/ui/styles/dashboard.css
@@ -1,31 +1,16 @@
-#backgroundCanvasAnchorPane {
-    -fx-background-color: rgba(102, 163, 29, 0.84);
-    -fx-background-color: #dbdbd9;
-}
-
-.roadSurface{
-    -fx-fill: #2e3436;
-}
-
-.midLine {
-    -fx-stroke-width: 2;
-    -fx-stroke: #dbdbd9;
-}
-
-.markLine {
-    -fx-stroke-width: 1;
-    -fx-stroke: #dbdbd9;
-    -fx-stroke-dash-array: 10 10 10 10;
-}
+@import "drawingpane.css";
+@import "optionpane.css";
+@import "statuspane.css";
 
 .controlButton{
     -fx-pref-width: 200px;
     -fx-pref-height: 30px;
-    -fx-background-color: gainsboro;
+    -fx-background-color: #1565C0;
     -fx-background-radius: 0px;
+
+    -fx-text-fill: black;
 }
 
 .controlButton:hover{
-    -fx-background-color: #1565C0;
     -fx-text-fill: white;
 }
