--- a/TrafficSimulator/src/ui/view/dashboard.fxml
+++ b/TrafficSimulator/src/ui/view/dashboard.fxml
@@ -3,56 +3,81 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1400.0" stylesheets="@../styles/dashboard.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1600.0" stylesheets="@../styles/dashboard.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardController">
    <children>
-      <StackPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <StackPane layoutX="400.0" prefHeight="800.0">
          <children>
             <AnchorPane fx:id="backgroundCanvasAnchorPane" />
             <AnchorPane fx:id="canvasAnchorPane" prefHeight="800.0" prefWidth="800.0" />
          </children>
       </StackPane>
-      <AnchorPane layoutX="800.0" prefHeight="800.0" prefWidth="600.0">
+      <AnchorPane fx:id="optionsAnchorPane" layoutX="800.0" prefHeight="800.0" prefWidth="400.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox layoutX="126.0" layoutY="122.0" spacing="20.0" AnchorPane.leftAnchor="126.0" AnchorPane.topAnchor="122.0">
-               <children>
-                  <VBox spacing="10.0">
-                     <children>
-                        <Label text="Vehicle density" />
-                        <Slider fx:id="vehicleDensitySlider" majorTickUnit="1.0" max="10.0" min="1.0" minorTickCount="0" prefHeight="16.0" prefWidth="350.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" />
-                     </children>
-                  </VBox>
-                  <VBox spacing="10.0">
-                     <children>
-                        <Label text="Average speed" />
-                        <Slider fx:id="averageSpeedSlider" majorTickUnit="1.0" max="10.0" min="1.0" minorTickCount="0" prefHeight="16.0" prefWidth="350.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" />
-                     </children>
-                  </VBox>
-                  <VBox spacing="10.0">
-                     <children>
-                        <Label text="Average gap" />
-                        <Slider fx:id="averageGapSlider" majorTickUnit="10.0" minorTickCount="1" prefHeight="16.0" prefWidth="350.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" />
-                     </children>
-                  </VBox>
-               </children>
-            </VBox>
-            <HBox alignment="CENTER" layoutY="650.0" spacing="50.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0">
+            <HBox fx:id="controlHBox" alignment="CENTER" layoutY="771.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <children>
                   <Button fx:id="startStopButton" mnemonicParsing="false" styleClass="controlButton" text="Start" />
                   <Button fx:id="resetButton" mnemonicParsing="false" styleClass="controlButton" text="Reset" />
                </children>
             </HBox>
-            <Label layoutX="154.0" layoutY="36.0" text="Junction Traffic Simulator">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
+            <TabPane prefHeight="700.0" prefWidth="400.0" tabClosingPolicy="UNAVAILABLE">
+               <tabs>
+                  <Tab fx:id="worldTab">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <GridPane layoutX="23.0" layoutY="43.0" prefHeight="284.0" prefWidth="443.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="412.0" minWidth="10.0" prefWidth="412.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label text="Vehicle density" />
+                                    <Label text="Average speed" GridPane.rowIndex="2" />
+                                    <Label text="Average gap" GridPane.rowIndex="4" />
+                                    <Slider fx:id="vehicleDensitySlider" majorTickUnit="1.0" max="20.0" min="1.0" minorTickCount="0" prefHeight="16.0" prefWidth="350.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" GridPane.rowIndex="1" />
+                                    <Slider fx:id="averageSpeedSlider" majorTickUnit="1.0" max="20.0" min="1.0" minorTickCount="0" prefHeight="16.0" prefWidth="350.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" GridPane.rowIndex="3" />
+                                    <Slider fx:id="averageGapSlider" majorTickUnit="10.0" max="50.0" minorTickCount="1" prefHeight="16.0" prefWidth="350.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" GridPane.rowIndex="5" />
+                                 </children>
+                              </GridPane>
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </Tab>
+                  <Tab fx:id="trafficTab">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                  </Tab>
+                  <Tab fx:id="connectTab">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                  </Tab>
+                  <Tab fx:id="themeTab">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                  </Tab>
+               </tabs>
+            </TabPane>
          </children>
       </AnchorPane>
+      <AnchorPane fx:id="statusAnchorPane" layoutY="14.0" prefHeight="800.0" prefWidth="400.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
    </children>
 </AnchorPane>
