--- a/TrafficSimulator/src/ui/view/dashboard.fxml
+++ b/TrafficSimulator/src/ui/view/dashboard.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXSlider?>
+<?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,6 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1600.0" stylesheets="@../styles/dashboard.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardController">
    <children>
@@ -50,11 +52,19 @@
                                     <Label text="Vehicle density" />
                                     <Label text="Average speed" GridPane.rowIndex="2" />
                                     <Label text="Average gap" GridPane.rowIndex="4" />
-                                    <Slider fx:id="vehicleDensitySlider" majorTickUnit="1.0" max="20.0" min="1.0" minorTickCount="0" prefHeight="16.0" prefWidth="350.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" GridPane.rowIndex="1" />
-                                    <Slider fx:id="averageSpeedSlider" majorTickUnit="1.0" max="20.0" min="1.0" minorTickCount="0" prefHeight="16.0" prefWidth="350.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" GridPane.rowIndex="3" />
-                                    <Slider fx:id="averageGapSlider" majorTickUnit="10.0" max="50.0" minorTickCount="1" prefHeight="16.0" prefWidth="350.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" GridPane.rowIndex="5" />
+                                    <JFXSlider fx:id="vehicleDensitySlider" majorTickUnit="1.0" max="20.0" min="1.0" minorTickCount="0" prefHeight="38.0" prefWidth="268.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" GridPane.rowIndex="1" />
+                                    <JFXSlider fx:id="averageSpeedSlider" majorTickUnit="1.0" max="20.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" GridPane.rowIndex="3" />
+                                    <JFXSlider fx:id="averageGapSlider" blockIncrement="5.0" majorTickUnit="5.0" max="20.0" minorTickCount="5" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" GridPane.rowIndex="5" />
                                  </children>
                               </GridPane>
+                              <VBox layoutX="48.0" layoutY="347.0">
+                                 <children>
+                                    <JFXToggleButton fx:id="northToggleButton" size="7.0" text="North" />
+                                    <JFXToggleButton fx:id="eastToggleButton" size="7.0" text="East" />
+                                    <JFXToggleButton fx:id="southToggleButton" size="7.0" text="South" />
+                                    <JFXToggleButton fx:id="westToggleButton" size="7.0" text="West" />
+                                 </children>
+                              </VBox>
                            </children>
                         </AnchorPane>
                     </content>
