--- a/TrafficSimulator/src/com/ivantha/ts/ui/styles/pane_option.css
+++ b/TrafficSimulator/src/com/ivantha/ts/ui/styles/pane_option.css
@@ -1,5 +1,12 @@
-#optionsAnchorPane{
+@import "tab_world.css";
+@import "tab_traffic.css";
+@import "tab_connect.css";
+@import "tab_theme.css";
 
+#optionsAnchorPane{
+}
+
+.tabAnchorPane{
 }
 
 .tab-pane *.tab-header-area *.tab-header-background {
@@ -71,10 +78,6 @@
     -fx-background-image: url("../icons/theme_white.png");
 }
 
-.slider > .thumb{
-    -fx-background-color: #1565C0;
-}
 
-.jfx-toggle-button{
-    -jfx-toggle-color: #1565C0;
-}
+
+
