TrafficLight state binded.

--- a/TrafficSimulator/src/com/ivantha/ts/ui/styles/pane_option.css
+++ b/TrafficSimulator/src/com/ivantha/ts/ui/styles/pane_option.css
@@ -43,11 +43,11 @@
 }
 
 #worldTab:hover {
-    -fx-background-image: url("../icons/world_white.png");
+    /*-fx-background-image: url("../icons/world_white.png");*/
 }
 
 #worldTab:selected {
-    -fx-background-image: url("../icons/world_white.png");
+    /*-fx-background-image: url("../icons/world_white.png");*/
 }
 
 #trafficTab {
