--- a/TrafficSimulator/src/com/ivantha/ts/ui/styles/dashboard.css
+++ b/TrafficSimulator/src/com/ivantha/ts/ui/styles/dashboard.css
@@ -8,7 +8,7 @@
     -fx-background-color: #1565C0;
     -fx-background-radius: 0px;
 
-    -fx-text-fill: black;
+    -fx-text-fill: #c8c8c8;
 }
 
 .controlButton:hover {
